--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <td><img src="Mannu.jpg" height="300" width="300" alt="Manmohan"></td>
         <td>
             <h1>Manmohan Mandhan</h1>
-            <strong>Student at <a href="">National Institute of Technology, Rourkela</a><br>
+            <strong>Student at <a href="https://nitrkl.ac.in/">National Institute of Technology, Rourkela</a><br>
                 Department of <a href="https://website.nitrkl.ac.in/CS/">Computer Science & engineering</a><br>
                <u>Competitive Programming Profiles:-</u> </strong><br>
                <br>
@@ -89,7 +89,7 @@
         <a href="CVTY.html">No</a>
     </div>
     <hr>
-    <h3>Thank you <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN</a>!!!</h3>
+    <h3>Thank you <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN</a>!!!</h3>
 
     
 </body>
