--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <td><img src="Mannu.jpg" height="300" width="300" alt="Manmohan"></td>
         <td>
             <h1>Manmohan Mandhan</h1>
-            <strong>Student at <a href="https://nitrkl.ac.in/">National Institute of Technology, Rourkela</a><br>
-                Department of <a href="https://website.nitrkl.ac.in/CS/">Computer Science & engineering</a><br>
+            <strong>Student at <a href="https://nitrkl.ac.in/" target="_blank">National Institute of Technology, Rourkela</a><br>
+                Department of <a href="https://website.nitrkl.ac.in/CS/" target="_blank">Computer Science & engineering</a><br>
                <u>Competitive Programming Profiles:-</u> </strong><br>
                <br>
             <li><a href="https://codeforces.com/profile/mandhan_63" target="_blank"><strong>Codeforces:-</strong></a> mandhan_63
@@ -28,7 +28,7 @@
     <hr>
     <u><h3>Education</h3></u>
     <ul>
-        <li><a href="https://www.nitrkl.ac.in/" target="_blank"><strong>NIT Rourkela, Rourkela</strong></a> (2021-Present)</li>
+        <li><a href="https://www.nitrkl.ac.in/" target="_blank"><strong>National Institute of Technoloy, Rourkela</strong></a> (2021-Present)</li>
         <br>Pursuing my B.Tech in Computer Science & Engineering<br>
         CGPA: 8.35/10 <br>
         <br><li><a href="https://www.sdsmschool.in/" target="_blank"> <strong>S.D.S.M. School of Excellence, Jamshedpur</strong> </a> (2019-2021)</li><br>
